[package]
name = "badmap"
version = "0.1.0"
edition = "2021"
description = "Bad Apple Map Renderer - Shape-Matched Real Coastlines in Rust"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Image processing
image = "0.25"
imageproc = "0.25"

# Shapefile reading
shapefile = "0.6"

# Parallel processing
rayon = "1.10"

# Progress bar
indicatif = { version = "0.17", features = ["rayon"] }


# Serialization for caching
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Random number generation
rand = "0.8"

# Errors
anyhow = "1.0"
thiserror = "2.0"
ffmpeg-sys-next = "8.0.1"
ffmpeg-next = "8.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
